--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
       ]
     }
     </script>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B87MKJ8RLT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-B87MKJ8RLT');
+    </script>
   </head>
   <body>
     <div id="root"></div>
