--- a/join/index.html
+++ b/join/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="../logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Single Page Apps for GitHub Pages -->
@@ -51,11 +51,12 @@
     <meta name="twitter:image:alt" content="Deenly - Quran Reading Tracker" />
 
     <!-- PWA Meta Tags -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Deenly" />
-    <link rel="apple-touch-icon" href="/logo.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="../logo.png" />
+    <link rel="manifest" href="../manifest.json" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://milhamdedi.github.io/deenly/join" />
@@ -97,6 +98,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="../src/main.tsx"></script>
   </body>
 </html>
