--- a/join/index.html
+++ b/join/index.html
@@ -32,10 +32,10 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://milhamdedi.github.io/deenly/join" />
+    <meta property="og:url" content="https://deenly.milhamdedi.com/join" />
     <meta property="og:title" content="Join me on Deenly - Complete the Quran Together!" />
     <meta property="og:description" content="Let's track our Quran reading journey together! Join this reading group and help us complete all 6,236 verses as a community. 📖✨" />
-    <meta property="og:image" content="https://milhamdedi.github.io/deenly/logo.png" />
+    <meta property="og:image" content="https://milhamdedi.com/deenly/logo.png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:image:alt" content="Deenly - Quran Reading Tracker" />
@@ -44,10 +44,10 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:url" content="https://milhamdedi.github.io/deenly/join" />
+    <meta name="twitter:url" content="https://deenly.milhamdedi.com/join" />
     <meta name="twitter:title" content="Join me on Deenly - Complete the Quran Together!" />
     <meta name="twitter:description" content="Let's track our Quran reading journey together! Join this reading group and help us complete all 6,236 verses as a community. 📖✨" />
-    <meta name="twitter:image" content="https://milhamdedi.github.io/deenly/logo.png" />
+    <meta name="twitter:image" content="https://milhamdedi.com/deenly/logo.png" />
     <meta name="twitter:image:alt" content="Deenly - Quran Reading Tracker" />
 
     <!-- PWA Meta Tags -->
@@ -59,7 +59,7 @@
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://milhamdedi.github.io/deenly/join" />
+    <link rel="canonical" href="https://deenly.milhamdedi.com/join" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -68,7 +68,7 @@
       "@type": "WebApplication",
       "name": "Deenly",
       "description": "Track your Quran reading journey with friends and family. Create journeys, log readings, and collectively work towards completing all 6,236 verses of the Quran.",
-      "url": "https://milhamdedi.github.io/deenly/",
+      "url": "https://milhamdedi.com/deenly/",
       "applicationCategory": "LifestyleApplication",
       "operatingSystem": "Web",
       "offers": {
